Fixed icon spacing in navbar redirect btn

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -258,6 +258,7 @@
         svg {
           height: 14px;
           width: 14px;
+          margin-right: 0;
         }
 
         &:hover {
